Deployment to GH Pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://james-gannon.github.io/cq-landing-page",
+  "homepage": "http://james-gannon.github.io/landing-page",
   "name": "cq-landing-page",
   "version": "0.1.0",
   "private": true,
